# lx-proxy

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  init.sql
.github/workflows/: go-sdk.yml  nodejs-sdk.yml  python-sdk.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/benches/: api_benchmark.rs
backend/migrations/: 001_init.sql  002_add_email_to_users.sql  003_add_totp_support.sql  004_add_email_and_sessions.sql  004_cluster_support.sql  005_add_indexes_optimization.sql  006_subscription_optimization.sql  007_plugin_system.sql  008_multi_node.sql  009_audit_logs.sql  README.md
backend/src/: auth.rs  cache.rs  cache_stats.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  openapi.rs  optimization.rs  websocket.rs  xray.rs  xray_api.rs
backend/src/audit/: handlers.rs  mod.rs  models.rs  service.rs
backend/src/cluster/: discovery.rs  election.rs  health.rs  mod.rs  mod_v2.rs  sync.rs  types.rs
backend/src/crypto/: encryptor.rs  helpers.rs  mod.rs
backend/src/email/: mod.rs  templates.rs
backend/src/handlers/: batch.rs  cluster.rs  email.rs  health.rs  plugins.rs  stats.rs  subscription.rs  totp.rs  traffic.rs
backend/src/middleware/: csrf_protection.rs  mod.rs  rate_limiter.rs  security_headers.rs
backend/src/node/: client.rs  handlers.rs  mod.rs  models.rs  service.rs
backend/src/plugins/: loader.rs  manager.rs  mod.rs
backend/src/plugins/builtin/: mod.rs
backend/src/tasks/: mod.rs  subscription_notifier.rs  traffic_recorder.rs  traffic_reset.rs
backend/src/totp/: mod.rs
backend/tests/: auth_test.rs  email_integration_test.rs  email_test.rs  inbound_test.rs  integration_tests.rs  totp_integration_test.rs  totp_test.rs  traffic_test.rs  user_test.rs
backend/tests/common/: mod.rs
docs/: API 文档.md  Docker部署指南.md  E2E 测试配置.md  HTTPS 部署配置.md  LX-Proxy-v1.0.0-发布总结.md  P1 功能总结.md  P10 完成状态总结.md  P10 开发进度总结.md  P10 测试完善与性能监控.md  P11 国际化开发进度.md  P12 测试进度报告 - 实时.md  P12 测试阶段总结.md  P12 移动端测试总结报告.md  P12 移动端适配完成报告.md  P12 移动端适配开发日志.md  P12 移动端适配开发计划.md  P12 移动端适配开发进度.md  P12 移动端适配测试执行摘要.md  P12 移动端适配测试报告.md  P12 移动端适配测试计划.md  P18-安全加固.md  P18-安全加固总结.md  P18-实施完成报告.md  P2 功能总结.md  P20-开发日志.md  P20-开发者生态开发计划.md  P20-阶段一-OpenAPI 文档集成完成.md  P20-阶段三-Node.js-SDK-开发完成.md  P20-阶段二-Python-SDK-开发完成.md  P20-阶段四-Go-SDK-开发完成.md  P3 功能总结.md  P4 功能总结.md  P6 功能总结.md  P7 功能总结.md  P8 测试与质量保障.md  P9 性能优化与缓存.md  RELEASE-v1.0.0.md  下一步开发计划.md  国际化支持.md  基准测试与监控.md  (+10 more)
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  dashboard.spec.ts  inbounds.spec.ts  mobile-responsive.spec.ts  mobile-simple.spec.ts  mobile-smoke.spec.ts  users.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.vue  i18n.ts  main.ts
frontend/src/api/: index.ts
frontend/src/components/: BatchActions.vue  LocaleToggle.vue  MainLayout.vue  ThemeToggle.vue
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en-US.json  zh-CN.json  zh-TW.json
frontend/src/locales/: en-US.json  zh-CN.json  zh-TW.json
frontend/src/stores/: auth.ts  theme.ts
frontend/src/styles/: dark-mode.css
frontend/src/views/: AdvancedStatsView.vue  AuditLogsView.vue  DashboardView.vue  EmailSettingsView.vue  InboundsView.vue  LoginView.vue  NodesView.vue  SettingsView.vue  SubscriptionView.vue  TotpSettingsView.vue  TrafficStatsView.vue  UsersView.vue
frontend/test-results/mobile-responsive-P12-移动端适配---主布局-应在-iPhone-SE-上隐藏桌面端侧边栏-chromium/: error-context.md
frontend/tests/: LoginView.test.ts  ThemeToggle.test.ts  api.test.ts  i18n.test.ts  setup.ts  theme.test.ts
kubernetes/: deployment.yaml
monitoring/: prometheus.yml
monitoring/prometheus/: rules.yml
scripts/: backup.sh  db_manage.sh  deploy.sh  evening-report.sh  health-check.sh  morning-report.sh  p18-quickstart.sh  security-setup.sh  test-mobile.sh
sdk/go/: .gitignore  README.md  go.mod
sdk/go/examples/: main.go
sdk/go/lxproxy/: client.go  client_test.go  errors.go  lxproxy.go  types.go
sdk/nodejs/: .eslintrc.json  .gitignore  README.md  jest.config.js  package.json  tsconfig.json  tsup.config.ts
sdk/nodejs/examples/: basic-usage.ts
sdk/nodejs/src/: client.ts  errors.ts  index.ts  types.ts
sdk/nodejs/test/: client.test.ts
sdk/python/: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  pyproject.toml
sdk/python/examples/: basic_usage.py
sdk/python/lxproxy/: __init__.py  client.py  exceptions.py
sdk/python/tests/: test_client.py
tests/: api_test.sh
