[package]
name = "lx_proxy_backend"
version = "0.1.0"
edition = "2021"
description = "LX-Proxy Backend - Xray management panel"

[dependencies]
# Web 框架
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置管理
dotenvy = "0.15"

# 密码哈希
argon2 = "0.5"

# JWT 认证
jsonwebtoken = "9"

# 随机数
rand = "0.8"

# Xray 配置生成
serde_yaml = "0.9"

# 系统信息
sysinfo = "0.32"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# 邮件发送
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport", "hostname", "pool"] }

# TOTP 双因素认证
totp-rs = "5"
base32 = "0.5"
sha1 = "0.10"
