[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lx-proxy"
version = "0.1.0"
description = "LX-Proxy Python SDK - Python client for LX-Proxy API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LX-Proxy Team", email = "dev@lx-proxy.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["lx-proxy", "xray", "proxy", "api", "sdk"]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/x64arm/lx-proxy"
Documentation = "https://github.com/x64arm/lx-proxy/tree/main/sdk/python"
Repository = "https://github.com/x64arm/lx-proxy.git"
Issues = "https://github.com/x64arm/lx-proxy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lxproxy*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
